--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <button class="check-btn" id="check">Check Order
       <i class="fa-solid fa-paper-plane"></i>
     </button>
+    <script src="script.js"></script>
   </ul>
 </body>
 </html>
