Add css styling

--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <script src="https://kit.fontawesome.com/848abbb50b.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <h1>10 Best Places To Travel</h1>
   <p>Drag and drop the items into their corresponding spots</p>
-  <ul class="draggable-list" id="draggable-list">
+  <ul class="draggable-list" id="draggable-list"></ul>
     <button class="check-btn" id="check">Check Order
       <i class="fa-solid fa-paper-plane"></i>
     </button>
     <script src="script.js"></script>
-  </ul>
+  
 </body>
 </html>
