--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>10 Best Places To Travel</h1>
+  <h1>10 Best Places To Travel
+    <i class="fa-solid fa-plane"></i>
+  </h1>
   <p>Drag and drop the items into their corresponding spots</p>
   <ul class="draggable-list" id="draggable-list"></ul>
     <button class="check-btn" id="check">Check Order
